# renpy_mcp_server

./: .gitignore  .mcp.json.example  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh  test_nano_banana.py  test_setup.sh
examples/: README.md  claude_agent_example.py  example_strands.py
src/renpy_mcp_server/: __init__.py  __main__.py  background_remover.py  build_manager.py  gemini_provider.py  image_service.py  logging_config.py  models.py  preview_manager.py  project_manager.py  server.py  settings.py
src/renpy_mcp_server/templates/basic/game/: options.rpy  script.rpy
